src/styles/globals.css
@import url("https://fonts.googleapis.com/css2?family=Bellota+Text&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Montserrat+Alternates&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Noto+Sans&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Noto+Sans+HK&display=swap");

@font-face {
    font-family: "Segoe UI Emoji";
    src: url("/assets/seguiemj.ttf") format("truetype");
    font-weight: normal;
    font-style: normal;
    font-display: swap;
}

:root {
    color-scheme: dark;

    --bellota-text-font-family: 'Bellota Text', 'Noto Sans', 'Noto Sans HK', 'Segoe UI Emoji', sans-serif;
    --montserrat-alternates-font-family: 'Montserrat Alternates', 'Noto Sans', 'Noto Sans HK', 'Segoe UI Emoji', sans-serif;
    --noto-sans-font-family: 'Noto Sans', 'Noto Sans HK', 'Segoe UI Emoji', sans-serif;
    --segeo-ui-emoji-font-family: 'Segoe UI Emoji', 'Noto Sans', 'Noto Sans HK', sans-serif;
}

@view-transition {
    navigation: auto
}

html,
body {
    max-width: 100vw;
    overflow-x: hidden;
}

* {
    transition: all 0.3s ease;
    scroll-behavior: smooth;
    box-sizing: border-box;
}

a {
    color: inherit;
    text-decoration: inherit;

    &:hover {
        text-decoration: underline;
    }
}

body {
    background: linear-gradient(to bottom, #222426 10%, #1d1f20 90%) fixed;
    color: #d3cfca;
    margin: 0;
    padding: 0;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: flex-start;
    height: 100svh;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;

    &::-webkit-scrollbar {
        display: none;
    }
}

#__next {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: flex-start;

    &::-webkit-scrollbar {
        display: none;
    }
}

main {
    width: 100%;
    flex-grow: 1;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: flex-start;
    overflow-y: scroll;
    overflow-x: visible;
    scroll-padding-top: 20px;

    &::-webkit-scrollbar {
        width: 8px;
    }

    &::-webkit-scrollbar-track {
        background-color: transparent;

        &:hover {
            background-color: #55555744;
            border-radius: 10px;
        }
    }

    &::-webkit-scrollbar-thumb {
        background: #555557;
        border-radius: 10px;

        &:hover {
            background-color: #7c7c7c;
        }
    }
}

.bold {
    font-weight: bold;
}

.underline {
    text-decoration: underline;
}

